Fixed the footer items alignment

--- a/Astroecstatic Blog/assets/css/main.scss
+++ b/Astroecstatic Blog/assets/css/main.scss
@@ -100,14 +100,15 @@ footer {
 .contact {
   float: left;
   padding: 25px;
-  margin-top: -90px;
+  margin-top: -120px;
+  margin-left: 30px;
 }
 
 .follow {
   float: right;
   margin-top: 90px;
-  margin-right: 25px;
-  margin-top: -2px;
+  margin-right: 35px;
+  margin-top: -35px;
 }
 
 .post-link {
